// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patterns-list Renders \`patterns-list\` with custom props 1`] = `
<div
  class="c-advanced-data-table"
  duplicable="true"
  removable="true"
  updatable="true"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-field-stub
        value="Filter"
      />
    </div>
    <div
      class="flex xs12"
    >
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <!---->
      </transition-stub>
    </div>
  </div>
  <div>
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Title: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="title"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Title
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light v-datatable-header__icon"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Type: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value="type"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                Type
              </div>
            </th>
            <th
              aria-label="Last modified on: Sorted descending. Activate to remove sorting."
              aria-sort="descending"
              class="column active desc sortable text-xs-left"
              data-value="updated"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified on
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light v-datatable-header__icon"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified by: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="author.display_name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified by
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light v-datatable-header__icon"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Actions: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value="actions"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                Actions
              </div>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="6"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="v-progress-linear"
                role="progressbar"
                style="height: 2px;"
              >
                <div
                  class="v-progress-linear__background primary"
                  style="height: 2px; opacity: 0.3; width: 100%;"
                />
                <div
                  class="v-progress-linear__bar"
                >
                  <transition-stub
                    name="fade-transition"
                  >
                    <div
                      class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                    >
                      <div
                        class="v-progress-linear__bar__indeterminate long primary"
                      />
                      <div
                        class="v-progress-linear__bar__indeterminate short primary"
                      />
                    </div>
                  </transition-stub>
                  <transition-stub
                    name="slide-x-transition"
                  />
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Alarm pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:48
              </span>
            </td>
            <td>
              author-0
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Entity pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:49
              </span>
            </td>
            <td>
              author-1
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Pbehavior pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:50
              </span>
            </td>
            <td>
              author-2
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Alarm pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:51
              </span>
            </td>
            <td>
              author-3
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Entity pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:52
              </span>
            </td>
            <td>
              author-4
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Pbehavior pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:53
              </span>
            </td>
            <td>
              author-5
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Alarm pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:54
              </span>
            </td>
            <td>
              author-6
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Entity pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:55
              </span>
            </td>
            <td>
              author-7
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Pbehavior pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:56
              </span>
            </td>
            <td>
              author-8
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Alarm pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:57
              </span>
            </td>
            <td>
              author-9
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <c-table-pagination-stub
    page="2"
    rows-per-page="10"
    total-items="11"
  />
</div>
`;

exports[`patterns-list Renders \`patterns-list\` with default props 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-field-stub />
    </div>
    <div
      class="flex xs12"
    >
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <!---->
      </transition-stub>
    </div>
  </div>
  <div>
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Title: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              class="column active asc sortable text-xs-left"
              data-value="title"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Title
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light v-datatable-header__icon"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Type: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value="type"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                Type
              </div>
            </th>
            <th
              aria-label="Last modified on: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="updated"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified on
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light v-datatable-header__icon"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Actions: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value="actions"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                Actions
              </div>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="5"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Alarm pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:48
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Entity pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:49
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Pbehavior pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:50
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Alarm pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:51
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Entity pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:52
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Pbehavior pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:53
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Alarm pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:54
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Entity pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:55
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Pbehavior pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:56
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Alarm pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:57
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              
            </td>
            <td>
              <span>
                Entity pattern
              </span>
            </td>
            <td>
              <span>
                04/03/2021 13:44:58
              </span>
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <c-table-pagination-stub />
</div>
`;
